--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/indoor-delivery-system
     docker:
       - image: circleci/node:7.10
-    working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
@@ -16,3 +16,10 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm run build
+      - type: deploy
+          name: "Deploy to production"
+        command: |
+          if [ "${CIRCLE_BRANCH}" == "master" ]; then
+            ssh root@indesy.atombyte.de -p 61000 'rm -r /var/www/html/*'
+            scp -P 61000 -r ~/indoor-delivery-system/build/* root@indesy.atombyte.de:/var/www/html/indesy.atombyte.de/
+          fi
