--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,4 @@ workflows:
             - build
           filters:
             branches:
-              only:
-                - master
+              only: master
