--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
           command: npm run build
       - persist_to_workspace:
           root: ~/indoor-delivery-system
+          paths:
+            - build
   deploy:
     <<: *defaults
     steps:
