--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "webpack-dev-server --config webpack.dev.js --hot --inline --open",
     "build": "webpack --config webpack.prod.js"
   },
-  "keywords": ["web", "application", "indoor", "delivery", "system"],
+  "keywords": [
+    "web",
+    "application",
+    "indoor",
+    "delivery",
+    "system"
+  ],
   "author": "nicklasfrahm",
   "license": "MIT",
   "devDependencies": {
@@ -15,23 +21,24 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "0.1.17",
-    "copy-webpack-plugin": "4.1.0",
+    "copy-webpack-plugin": "4.1.1",
     "css-loader": "0.28.7",
-    "file-loader": "1.1.4",
+    "file-loader": "1.1.5",
     "html-webpack-plugin": "2.30.1",
-    "style-loader": "0.18.2",
-    "uglifyjs-webpack-plugin": "0.4.6",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "2.9.1",
+    "style-loader": "0.19.0",
+    "uglifyjs-webpack-plugin": "1.0.0-beta.3",
+    "webpack": "3.7.1",
+    "webpack-dev-server": "2.9.2",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
     "coord-convert": "1.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-geolocated": "2.0.0",
+    "react-geolocated": "2.1.0",
     "react-router-dom": "4.2.2",
     "semantic-ui-css": "2.2.12",
-    "semantic-ui-react": "0.74.2"
+    "semantic-ui-react": "0.75.0",
+    "socket.io-client": "2.0.3"
   }
 }
