--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "0.1.17",
-    "copy-webpack-plugin": "4.1.1",
+    "copy-webpack-plugin": "4.2.0",
     "css-loader": "0.28.7",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.30.1",
     "style-loader": "0.19.0",
-    "uglifyjs-webpack-plugin": "1.0.0-beta.3",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.2",
+    "webpack-dev-server": "2.9.3",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
     "coord-convert": "1.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-geolocated": "2.1.0",
+    "react-geolocated": "2.2.1",
     "react-router-dom": "4.2.2",
     "semantic-ui-css": "2.2.12",
     "semantic-ui-react": "0.75.1",
-    "socket.io-client": "2.0.3"
+    "socket.io-client": "2.0.4"
   }
 }
