--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-webpack-plugin": "0.1.17",
     "copy-webpack-plugin": "4.2.0",
     "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.30.1",
     "style-loader": "0.19.0",
