Add robot overview

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
+    "axios": "0.17.0",
     "coord-convert": "1.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
